# General-Genre-Video-Game

./: .gitignore  CMakeLists.txt  MiscStuff  README.md  TODO
.github/workflows/: cpp-linter.yml
lua/: ai.lua
src/: city.cpp  city.h  game.cpp  game.h  lua.cpp  lua.hpp  main.cpp  map.cpp  map.h  player.cpp  player.h  resources.cpp  resources.h  unit.cpp  unit.h  uuid.hpp
